--- a/notebooks/9-Classification.ipynb
+++ b/notebooks/9-Classification.ipynb
@@ -19,8 +19,8 @@
       },
       "outputs": [],
       "source": [
-        "! pip install --upgrade pip\n",
-        "! pip install --upgrade scikit-learn\n",
+        "! pip install -- upgrade pip\n",
+        "! pip install -- upgrade scikit-learn\n",
         "! pip install PyDrive\n",
         "! pip install plotly==5.3.1\n",
         "! pip install pyyaml==5.4.1\n",
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -38,16 +38,7 @@
         "id": "PB3NjTK7Kl0N",
         "outputId": "c9b92713-f0fd-49d4-c162-d25fdb497fb0"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/distributed/config.py:20: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-            "  defaults = yaml.load(f)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# libs used \n",
         "import logging\n",
@@ -67,14 +58,14 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
         "import torch\n",
-        "from google.colab import drive\n",
+        "#from google.colab import drive\n",
         "from sklearn.utils import resample\n",
         "from sklearn.preprocessing import LabelEncoder"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "lyp5-USpZ_Nx"
       },
@@ -92,7 +83,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tenserfow\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -179,6 +179,14 @@
       "source": [
         "# Fine-tune pretrained model \n",
         "def compute_metrics(p):\n",
+        "    \"\"\"_summary_\n",
+        "\n",
+        "    Args:\n",
+        "        p (_type_): _description_\n",
+        "\n",
+        "    Returns:\n",
+        "        _type_: _description_\n",
+        "    \"\"\"\n",
         "    pred, labels = p\n",
         "    pred = np.argmax(pred, axis=1)\n",
         "\n",
@@ -259,13 +267,20 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 10,
       "metadata": {
         "id": "GLawirlkNhho"
       },
       "outputs": [],
       "source": [
-        "# rows with labels that already existed in df_train\n",
+        "#rows with labels that already existed in df_train\n",
         "df_test = df_test[df_test[\"ce\"].isin(df_train.ce.unique())]"
       ]
     },
@@ -1312,7 +1327,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.7.11"
     },
     "widgets": {
