--- a/notebooks/9-Classification.ipynb
+++ b/notebooks/9-Classification.ipynb
@@ -30,13 +30,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PB3NjTK7Kl0N",
-        "outputId": "f824c269-9179-4596-bb2c-c04a81f50551"
+        "id": "PB3NjTK7Kl0N"
       },
       "outputs": [],
       "source": [
@@ -71,7 +67,8 @@
       },
       "outputs": [],
       "source": [
-        "# hello \n"
+        "# hello \n",
+        "#Test\n"
       ]
     },
     {
@@ -1304,7 +1301,6 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "authorship_tag": "ABX9TyO7zyMcD0ltG4qcrLlorx0u",
       "collapsed_sections": [],
       "name": "9-Classification.ipynb",
       "provenance": [],
