--- a/notebooks/10_STS_decision_optimisation_2.ipynb
+++ b/notebooks/10_STS_decision_optimisation_2.ipynb
@@ -84,16 +84,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "aR2qby9OtHdL",
-      "metadata": {
-        "id": "aR2qby9OtHdL"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "id": "86cccd83-2507-4e56-896b-df04cb5724be",
       "metadata": {
@@ -252,6 +242,10 @@
       "outputs": [],
       "source": [
         "def test_transform_data(columns_to_Encod):\n",
+        "  \"\"\"this function return an example of the transformation\n",
+        "  Args:\n",
+        "      columns_to_Encod (pandas): input\n",
+        "  \"\"\"\n",
         "  test_frame = pd.DataFrame(data=[df_corpus_top5.iloc[0].values], columns=df_corpus_top5.columns)\n",
         "  table_input = tabulate(test_frame,headers=test_frame.columns, tablefmt='github')\n",
         "  print(\"\\033[0;32;47m    Input  :  \\n\")\n",
@@ -300,8 +294,18 @@
       },
       "outputs": [],
       "source": [
-        "# model_selection function : just to get an idea about the general performance of each model\n",
         "def model_selection(X, y,models):\n",
+        "    \"\"\"just to get an idea about the general performance of each model \n",
+        "       using K-Folds cross-validator (Split dataset into k consecutive folds)\n",
+        "       Each fold is  used once as a validation while the k - 1 remaining folds form the training set.\n",
+        "    Args:\n",
+        "        X (pandas): X_data\n",
+        "        y (pandas): y_data\n",
+        "        models (dict): SKlearn models\n",
+        "\n",
+        "    Returns:\n",
+        "        df_evaluation(pandas): data frame contains all scores\n",
+        "    \"\"\"\n",
         "    iteration = 0\n",
         "    k = 7\n",
         "    models_score = {\n",
@@ -316,8 +320,7 @@
         "\n",
         "    kf = KFold(n_splits=k)\n",
         "    kf.get_n_splits(X)\n",
-        "\n",
-        "    \n",
+        "     \n",
         "    for train_index, test_index in kf.split(X):\n",
         "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
         "        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
@@ -354,18 +357,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "id": "UMWEaVoit0mi",
-      "metadata": {
-        "id": "UMWEaVoit0mi"
-      },
-      "outputs": [],
-      "source": [
-        "# hello raed"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 16,
       "id": "uVrcmSURBqhs",
       "metadata": {
@@ -374,6 +365,19 @@
       "outputs": [],
       "source": [
         "def benchmark_ML_models(X_train, X_test,y_train, y_test,models,data):\n",
+        "    \"\"\"all models prediction without hyperparameters optimization\n",
+        "\n",
+        "    Args:\n",
+        "        X_train (pandas): X_train\n",
+        "        X_test (pandas): X_test\n",
+        "        y_train (pandas): y_train\n",
+        "        y_test (pandas): y_test\n",
+        "        models (dict): SKlearn models\n",
+        "        data (pandas): it is the test set\n",
+        "\n",
+        "    Returns:\n",
+        "        data: the test set with all models predictions and scores\n",
+        "    \"\"\"\n",
         "\n",
         "    models[\"K_nn\"].fit(X_train, y_train)\n",
         "    predKNeighbors = models[\"K_nn\"].predict(X_test)\n",
@@ -441,8 +445,7 @@
         "    for i in models:\n",
         "      data[i+\"_prediction\"]=prediction[i]\n",
         "      data[i+\"_score\"]=probability[i]\n",
-        "\n",
-        "\n",
+        "      \n",
         "    return data"
       ]
     },
@@ -6253,9 +6256,17 @@
         "# dataset definition\n",
         "\n",
         "def prepere_data(df_all_Feature):\n",
-        "  # load the csv file as a dataframe\n",
+        "  \"\"\"load the csv file as a dataframe  and store the inputs and outputs\n",
+        "\n",
+        "  Args:\n",
+        "      df_all_Feature (pandas): input\n",
+        "\n",
+        "  Returns:\n",
+        "      X,y(serie): outout\n",
+        "  \"\"\"\n",
+        "  # \n",
         "  \n",
-        "  # store the inputs and outputs\n",
+        "  # \n",
         "  X = df_all_Feature[COLS].values\n",
         "  y = df_all_Feature['label_true'].values\n",
         "  # ensure input data is floats\n",
