--- a/notebooks/10_STS_decision_optimisation_2.ipynb
+++ b/notebooks/10_STS_decision_optimisation_2.ipynb
@@ -2,9 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "72e6ebcf",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/raed779/semantic-text-similarity/blob/raed_test/10_STS_decision_optimisation_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -114,8 +115,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -138,8 +139,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/drive/Shareddrives/RENAULT PROJECT DRIVE/202201-Categorisation-DRG /data\n"
           ]
@@ -232,7 +233,7 @@
         "  print(\"\\n\")\n",
         "  print(\"\\033[0;32;47m  Outout  :  \\n\")\n",
         "  table_output = tabulate(result,headers = result.columns, tablefmt='github')\n",
-        "  print(\"\\033[0;32;47m \"+table_output)\n"
+        "  print(\"\\033[0;32;47m \"+table_output)"
       ]
     },
     {
@@ -451,34 +452,7 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "    score_1   score_2   score_3   score_4   score_5       label_pred_1  \\\n",
-              "0  0.738368  0.717175  0.714135  0.707027  0.706180  wrong designation   \n",
-              "1  0.713122  0.684600  0.674399  0.672508  0.668059       black screen   \n",
-              "2  0.618209  0.610258  0.599718  0.589054  0.578812      display issue   \n",
-              "\n",
-              "             label_pred_2   label_pred_3              label_pred_4  \\\n",
-              "0  message \"sos to check\"     reset adac    message sos to control   \n",
-              "1            black screen     reset adac  tachometer needle freeze   \n",
-              "2           display issue  display issue             aspect issue    \n",
-              "\n",
-              "             label_pred_5     label_true  is_pred_1_correct  \\\n",
-              "0  message sos to control   out of scope                  0   \n",
-              "1              reset adac  aspect issue                   0   \n",
-              "2          settings issue  aspect issue                   0   \n",
-              "\n",
-              "   is_pred_2_correct  is_pred_3_correct  is_pred_4_correct  is_pred_5_correct  \\\n",
-              "0                  0                  0                  0                  0   \n",
-              "1                  0                  0                  0                  0   \n",
-              "2                  0                  0                  1                  0   \n",
-              "\n",
-              "   is_top3_correct  is_top5_correct  \n",
-              "0                0                0  \n",
-              "1                0                0  \n",
-              "2                0                1  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-525e5cb5-e265-4f0e-b0b0-1b31da6a57d6\">\n",
@@ -664,10 +638,37 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "    score_1   score_2   score_3   score_4   score_5       label_pred_1  \\\n",
+              "0  0.738368  0.717175  0.714135  0.707027  0.706180  wrong designation   \n",
+              "1  0.713122  0.684600  0.674399  0.672508  0.668059       black screen   \n",
+              "2  0.618209  0.610258  0.599718  0.589054  0.578812      display issue   \n",
+              "\n",
+              "             label_pred_2   label_pred_3              label_pred_4  \\\n",
+              "0  message \"sos to check\"     reset adac    message sos to control   \n",
+              "1            black screen     reset adac  tachometer needle freeze   \n",
+              "2           display issue  display issue             aspect issue    \n",
+              "\n",
+              "             label_pred_5     label_true  is_pred_1_correct  \\\n",
+              "0  message sos to control   out of scope                  0   \n",
+              "1              reset adac  aspect issue                   0   \n",
+              "2          settings issue  aspect issue                   0   \n",
+              "\n",
+              "   is_pred_2_correct  is_pred_3_correct  is_pred_4_correct  is_pred_5_correct  \\\n",
+              "0                  0                  0                  0                  0   \n",
+              "1                  0                  0                  0                  0   \n",
+              "2                  0                  0                  1                  0   \n",
+              "\n",
+              "   is_top3_correct  is_top5_correct  \n",
+              "0                0                0  \n",
+              "1                0                0  \n",
+              "2                0                1  "
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -690,34 +691,7 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "    score_1   score_2   score_3   score_4   score_5  label_pred_1  \\\n",
-              "0  0.710615  0.706026  0.666258  0.664980  0.658934  black screen   \n",
-              "1  0.737935  0.703151  0.699834  0.696477  0.692233  black screen   \n",
-              "2  0.757152  0.736345  0.720983  0.714639  0.712411  black screen   \n",
-              "\n",
-              "                       label_pred_2   label_pred_3  \\\n",
-              "0  reception issue ( fm am dab gps)  antenna issue   \n",
-              "1                     inexploitable   black screen   \n",
-              "2                      black screen   black screen   \n",
-              "\n",
-              "                       label_pred_4  label_pred_5         label_true  \\\n",
-              "0                 replication issue  black screen      antenna issue   \n",
-              "1                    display freeze    ecu update      error message   \n",
-              "2  reception issue ( fm am dab gps)  camera issue  replication issue   \n",
-              "\n",
-              "   is_pred_1_correct  is_pred_2_correct  is_pred_3_correct  is_pred_4_correct  \\\n",
-              "0                  0                  0                  1                  0   \n",
-              "1                  0                  0                  0                  0   \n",
-              "2                  0                  0                  0                  0   \n",
-              "\n",
-              "   is_pred_5_correct  is_top3_correct  is_top5_correct  \n",
-              "0                  0                1                1  \n",
-              "1                  0                0                0  \n",
-              "2                  0                0                0  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-0219d196-e306-455b-b3fa-1f965fa7c40f\">\n",
@@ -903,10 +877,37 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "    score_1   score_2   score_3   score_4   score_5  label_pred_1  \\\n",
+              "0  0.710615  0.706026  0.666258  0.664980  0.658934  black screen   \n",
+              "1  0.737935  0.703151  0.699834  0.696477  0.692233  black screen   \n",
+              "2  0.757152  0.736345  0.720983  0.714639  0.712411  black screen   \n",
+              "\n",
+              "                       label_pred_2   label_pred_3  \\\n",
+              "0  reception issue ( fm am dab gps)  antenna issue   \n",
+              "1                     inexploitable   black screen   \n",
+              "2                      black screen   black screen   \n",
+              "\n",
+              "                       label_pred_4  label_pred_5         label_true  \\\n",
+              "0                 replication issue  black screen      antenna issue   \n",
+              "1                    display freeze    ecu update      error message   \n",
+              "2  reception issue ( fm am dab gps)  camera issue  replication issue   \n",
+              "\n",
+              "   is_pred_1_correct  is_pred_2_correct  is_pred_3_correct  is_pred_4_correct  \\\n",
+              "0                  0                  0                  1                  0   \n",
+              "1                  0                  0                  0                  0   \n",
+              "2                  0                  0                  0                  0   \n",
+              "\n",
+              "   is_pred_5_correct  is_top3_correct  is_top5_correct  \n",
+              "0                  0                1                1  \n",
+              "1                  0                0                0  \n",
+              "2                  0                0                0  "
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -945,8 +946,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[0;32;47m    Input  :  \n",
             "\n",
@@ -6027,13 +6028,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# df assess"
-      ],
+      "id": "95MsOCt34T6l",
       "metadata": {
         "id": "95MsOCt34T6l"
       },
-      "id": "95MsOCt34T6l"
+      "source": [
+        "# df assess"
+      ]
     },
     {
       "cell_type": "code",
@@ -6809,11 +6810,11 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "machine_shape": "hm",
       "name": "10_STS_decision_optimisation_2.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
