--- a/notebooks/10_STS_decision_optimisation_2.ipynb
+++ b/notebooks/10_STS_decision_optimisation_2.ipynb
@@ -54,21 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "K9uFrXPg0RBs",
    "metadata": {
     "id": "K9uFrXPg0RBs"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\anaconda3\\envs\\ML\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -106,6 +97,16 @@
     "from torch.nn.init import kaiming_uniform_\n",
     "from torch.nn.init import xavier_uniform_\n",
     "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3e7e2464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import PyPDF2"
    ]
   },
   {
