--- a/notebooks/9-Classification.ipynb
+++ b/notebooks/9-Classification.ipynb
@@ -55,7 +55,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "PB3NjTK7Kl0N"
       },
@@ -98,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "lyp5-USpZ_Nx"
       },
@@ -108,7 +118,7 @@
         "from transformers import BertTokenizer, BertForSequenceClassification\n",
         "from transformers import EarlyStoppingCallback\n",
         "import os\n",
-        "import nltk\n",
+        "\n",
         "import pandas as pd\n",
         "from tqdm.auto import tqdm\n",
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification"
